# contract-schema

./: .gitignore  README.md  __init__.py  analytic_schema.json  analytic_schema.py  document.py  example.py  example_analytic.ipynb  example_analytic.py  example_model.py  example_usage.py  loader.py  makefile  output.py  parser.py  pyproject.toml  setup.py  test_analytic_schema.ipynb  test_analytic_schema.py  utils.py  validator.py
.ipython/profile_default/: history.sqlite
analytic_schema/: analytic_schema.json  output.py  validator.py
contract_schema/: __init__.py  card.py  contract.py  document.py  loader.py  parser.py  utils.py  validator.py
contract_schema.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
contract_schema/schemas/: analytic_plans.json  analytic_plans_d3fend.json  analytic_results_cim.json  analytic_schema.json  contract_meta_schema.json  model_schema.json
legacy/analytic-schema/: .gitignore  README.md  analytic_schema.py  makefile  pyproject.toml
legacy/analytic-schema/analytic_schema/: loader.py  validator.py
legacy/analytic-schema/tests/: test_analytic_schema.py
schemas/: analytic_schema.json
tests/: _util.py  test_analytic_schema.py  test_card.py  test_contract.py  test_document.py  test_loader.py  test_parser.py  test_utils.py  test_validator.py
tests/analytic/: test_analytic.py
tests/cim/: test_cim.py  test_results_payload.py
tests/meta/: test_meta.py
tests/model/: test_model.py
