# pyproject.toml contract-schema

[project]
name = "contract-schema"
description = "Standardised inputs and outputs based on contract files."
readme = "README.md"
version = "1.0.0"
requires-python = ">=3.8"
license-file = { file = "LICENSE.md" }
authors = [
  { name="Zachary Szewczyk", email="zacjszewczyk@gmail.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License-Expression :: LicenseRef-Special-License",
  "Operating System :: OS Independent"
]

[project.optional-dependencies]
analytic = ["pandas>=1.0"]

[tool.setuptools.package-data]
"contract_schema.schemas" = ["*.json"]

[project.urls]
Homepage = "https://github.com/zacjszewczyk/contract-schema"
Issues   = "https://github.com/zacjszewczyk/contract-schema/issues"
